archive/applications/software/home1/satisfactory/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: satisfactory
  namespace: satisfactory
  labels:
    app: satisfactory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: satisfactory
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: satisfactory
    spec:
      nodeSelector:
        location: home1
      tolerations:
        - key: "PrivateNode"
          operator: "Equal"
          value: "home1"
      containers:
        - name: satisfactory
          image: mirror.gcr.io/wolveix/satisfactory-server:latest@sha256:ac252dba41653eb21c6feed94b577f98fa152f5792b1aeff2ce11fe364355137
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 7777
              hostPort: 7777
              protocol: UDP
            - containerPort: 7777
              hostPort: 7777
              protocol: TCP
            - containerPort: 8888
              hostPort: 8888
              protocol: TCP
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
          resources:
            requests:
              cpu: 0m
              memory: 0Mi
            limits:
              cpu: 3
              memory: 12Gi
        - name: frmcompanion
          image: featheredtoast/ficsit-remote-monitoring-companion@sha256:6c003115f5b748687cdff1dea963d956a005fee6239265e357ea8b14c7bfb18b
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 9000
              name: http
              hostPort: 9000
              protocol: TCP
        - name: frmcache
          image: featheredtoast/ficsit-remote-monitoring-cache@sha256:54a5c77cc05738619d41372e7c86567843c94f65ed56495d1aef1ae60ab731a1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: config
          hostPath:
            path: /media/disk/satisfactory
            type: Directory
