archive/applications/software/home1/satisfactory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: satisfactory
  namespace: satisfactory
  labels:
    app: satisfactory
spec:
  ports:
  - name: http
    port: 9000
    targetPort: 9000
  selector:
    app: satisfactory
  type: ClusterIP
